# rgbw_colorspace_converter

./: .flake8  .gitignore  .pre-commit-config.yaml  .sync-config.cson  .travis.yml  HelperClasses.py  HelperFunctions.py  LICENSE  README.md  build.sh  color.py  color1.py  color2.py  go.py  go_led.py  go_sheep.py  go_sheep_broken_now.py  go_tri.py  grid.py  investigate.py  launch  led_strip.py  morph.py  osc_serve.py  print_tri.py  pyproject.toml  pytest.ini  randomcolor.py  requirements.txt  rrun.sh  run_them.sh  run_them.sh~  run_them2.sh  setup.cfg  setup.py  sheep.py  show_runner.py  test.py  test2.py  test_tri.py  (+4 more)
arch/: another_color.py  color.py  color1.py  updates_suspect.color.py
data/: 6_tri.json  dmx_mapping.json  geom.txt  led_strip.geom  led_strip.json  led_strip2.json  led_strip_2u.json  pixel_map.json  sheep_dmx_mappings.json  sheep_dmx_mappings2.json
doc/: Writing_Shows.md  example.py
docs/: color.html  index.html  osc_serve.html  playlist.html
dudek/: HelperClasses.py  HelperFunctions.py  triangle.py
environment/: HBP.yaml  env.sh  requirements.txt  setup.sh
etc/: dist_notes.md  rgbw_csc.asc  rgbw_csc.html  rgbw_csc_2.asc  rgbw_csc_2.html
grid/: __init__.py  cell.py  cells.py  face.py  geom.py  grid.py  pyramid.py  select.py  traversal.py
hbp_colorspace_converter/: hbp_colorspace_converter.py  randomcolor.py
js/: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tailwind.config.js
led_shows/: AllWhite.py  LeapFrog.py  SimpleAnnoyingStrobe.py  SimpleLEDChase.py  __init__.py
lib/: OSC.py  bonjour.py  color.py  randomcolor.py
misc/: ShowControl.touchosc  fucked_up_ola_dmxkingshit.txt
model/: __init__.py  base.py  mapping.py  mirror.py  modelbase.py  null.py  ola_model.py  sacn_model.py  simulator.py
ola/: ArtNetConfigMessages_pb2.py  Ola_pb2.py  PidStoreLocation.py  Pids_pb2.py  UsbProConfigMessages_pb2.py  Version.py
ponzicolor/: color.py  scale.py  space.py
pyramid_scheme/: README.md
pyramidtriangles/: __init__.py  color.py  osc_serve.py  playlist.py  show_runner.py
scripts/: build_pixel_map_json.py  build_tri_cell_mapping.py  emit_led_strip_geom.py  emit_led_strip_geom2u.py  emit_led_strip_json.py  emit_led_strip_json2.py  proc_tri_dat.py  re-format-sheep-json.py  reemit_mapping.py
shows/: Bee.py  Blinky.py  Bounce.py  CenterColors.py  Cocoon.py  Equalizer.py  (+62 more)
(+204 files in other folders)
