[metadata]
name = hbp_color_space_converter
version = 0.0.1
author = John Major / Greg Brown / Justin Cummings
author_email = iamh2o@gmail.com
description = Generate RGBW values for RGB, HSV, HSL, HEX, HSI values, and move between them all.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamh2o/HBP-Color-Space-Converter
project_urls =
    Bug Tracker = https://github.com/iamh2o/HBP-Color-Space-Converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src