[metadata]
name = rgbw_colorspace_converter
version = 0.0.7
author = John Major
author_email = iamh2o@gmail.com
description = Generate RGBW values for RGB, HSV, HSL, HEX, HSI values, and move between them all.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamh2o/rgbw_colorspace_converter
project_urls =
    Bug Tracker = https://github.com/iamh2o/rgbw_colorspace_converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    colr
    docopt
[options.packages.find]
where = src